@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1240 2013/03/28 13:30:58 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1241 2013/03/31 02:59:56 zmedico Exp $
+
+  31 Mar 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.58.ebuild,
+  -portage-2.2.0_alpha169.ebuild:
+  Remove old versions.
 
   28 Mar 2013; Joseph Jezak <josejx@gentoo.org> portage-2.1.11.55.ebuild:
   Marked ppc/ppc64 stable for bug #462134.
